--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,9 +1,13 @@
 .section_container {
     
     padding: 0px 15px;
-    margin-right: auto;
-    margin-left: auto;
-    width: 1200px;
+    margin: 0 auto;
+    width: 100%;
+
+    @media screen and (min-width: 320px) {
+            width: 320px;
+    
+        }
 
     @media screen and (min-width: 480px) {
             width: 480px;
@@ -22,8 +26,14 @@
 
 .section_wrapper {
 
-    padding-top: 60px;
-    padding-bottom: 30px;
+    padding-top: 40px;
+    padding-bottom: 20px;
+
+    @media screen and (min-width: 480px) {
+            padding-top: 60px;
+            padding-bottom: 30px;
+    
+        }
 
     @media screen and (min-width: 1200px) {
             padding-top: 94px;
@@ -39,18 +49,40 @@
 }
 
 .section-portfolio {
-    padding: 94px 0;
+    width: 100%;
+    padding: 40px 0;
+
+    @media screen and (min-width: 480px) {
+    padding: 60px 0;
+    }
+        @media screen and (min-width: 1200px) {
+            padding: 94px 0;
+        }
+    
 }
 
 .section-item {
     display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 40px;
+        flex-wrap: wrap;
+        
+    margin-bottom: 30px;
     gap: 8px;
+
+    @media screen and (min-width:480px) {
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: 40px;
+        }
 
     @media screen and (min-width:768px) {
         justify-content: center;
         margin-bottom: 50px;
+    }
+}
+
+.section-list{
+    @media screen and (max-width:479px) {
+        margin-bottom: 10px;
     }
 }
 
