--- a/sass/components/_advantage.scss
+++ b/sass/components/_advantage.scss
@@ -15,12 +15,19 @@
 }
 
 .advantage_item {
-    width: 450px;
-    gap: 30px;
+    width: 290px;
+    gap: 20px;
    
+    @media screen and (min-width: 480px) {
+            width: 450px;
+            height: auto;
+            gap: 25px;
+        }
+
 @media screen and (min-width: 768px) {
     width: 354px;
     height: auto;
+    gap: 30px;
 }
 @media screen and (min-width: 1200px) {
     width: 270px;
@@ -33,13 +40,19 @@
 
 .advantage-wrapper__icon {
     @include flex;
-    width: 450px;
-    height: 226px;
+    width: 100%;
+    height: 140px;
 
     background-color: var(--secondary-bg-color);
     margin-bottom: 30px;
     gap: 30px;
     border-radius: 4px;
+
+    @media screen and (min-width: 480px) {
+            width: 450px;
+            height: 226px;
+    
+        }
 
     @media screen and (min-width: 768px) {
     width: 354px;
