--- a/sass/components/_burger.scss
+++ b/sass/components/_burger.scss
@@ -3,7 +3,7 @@
     min-width: 40px;
     @include flex;
 
-    margin-left: auto;
+    margin-left: 90px;
     padding: 0;
 
     background-color: transparent;
@@ -12,6 +12,10 @@
     border: none;
     border-radius: 50%;
     outline: none;
+
+    @media screen and (min-width: 480px) {
+        margin-left: auto;
+    }
 
     
     & .icon__menu{
@@ -25,6 +29,8 @@
         display: none;
     }
 }
+
+       
 
     @media screen and(min-width: 768px) {
     .menu-toggle {
@@ -91,11 +97,15 @@
     text-decoration: none;
 
     font-weight: 500;
-    font-size: 40px;
+    font-size: 30px;
     line-height: calc(47/40);
     
     letter-spacing: 0.02em;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    @media screen and (min-width: 480px) {
+        font-size: 40px;
+        
+    }
     
     &.link-mobile__focus{
         color: var(--accent-color);
@@ -116,42 +126,73 @@
 .mobile-phone{
     
     font-weight: 500;
-    font-size: 34px;
+    font-size: 20px;
     line-height: calc(40/34);
     letter-spacing: 0.02em;
     text-decoration: none;
     color: var(--accent-color);
+
+    @media screen and (min-width:480px) {
+        font-size: 34px;
+    }
 }
 
 .mobile-mail{
 
     font-weight: 500;
-    font-size: 24px;
+    font-size: 18px;
     line-height: calc(28/24);
     letter-spacing: 0.02em;
     text-decoration: none;
     color: var(--primary-text-color);
+    @media screen and (min-width:480px) {
+            font-size: 24px;
+        }
 }
 
 .mobile-socials{
+    
+    display: none;
+    
+
+    @media screen and (min-width: 480px) {
     padding: 10px;
     list-style: none;
     display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
     margin-top: 40px;
     position: relative;
+    }
+
 }
 
-.mobile-sites__line > a::after {
-     content: '';
-     display: block;
-     width: 1px;
-     height: 22px;
-     border-radius: 3px;
-     background-color: var(--accent-color);
-     position: absolute;
-     bottom: 10px;
-     left: 105px;
- }
+.mobile__footer{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap:10px;
+    
+    margin-top: 40px;
+
+    @media screen and (min-width:480px){
+        display: none;
+    }
+}
+
+// .mobile-sites__line>a::after {
+//      content: '';
+//      display: block;
+//      width: 1px;
+//      height: 22px;
+//      border-radius: 3px;
+//      background-color: var(--accent-color);
+//      position: absolute;
+//      top:10px;
+     
+     
+     
+//  }
 
 .mobile-sites:not(:last-child) {
      margin-right: 20px;
