--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
     max-width: 100%;
-    height: 400px;
+    height: 350px;
     margin-left: auto;
     margin-right: auto;
     background-color: var(--footer-bg-color);
@@ -13,6 +13,10 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+
+    @media screen and (min-width: 420px) {
+        height: 400px;
+    }
     
 
     @media screen and (min-device-pixel-ratio: 2),
@@ -66,13 +70,18 @@
     font-weight: 900;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    font-size: 26px;
+    font-size: 18px;
     line-height: calc(42/26);
     margin: 0 auto;
     margin-bottom: 30px;
-    width: 360px;
+    width: 300px;
     
-    
+    @media screen and (min-width: 480px) {
+            font-size: 26px;
+            line-height: 1.6;
+            margin-bottom: 20px;
+            width: 360px;
+        }
 
 
        @media screen and (min-width: 1200px) {
