--- a/css/main.css
+++ b/css/main.css
@@ -1312,9 +1312,18 @@ button {
   padding: 40px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (max-width: 1199px) {
+  .modal {
+    width: 95%;
+    max-width: 450px;
+    height: 95%;
+    max-height: 609px;
+    overflow: scroll;
+  }
+}
 @media screen and (min-width: 1200px) {
   .modal {
-    width: 530px;
+    width: 528px;
     min-height: 580px;
   }
 }
@@ -1357,6 +1366,11 @@ button {
   font-weight: 700;
   text-align: center;
   margin-bottom: 12px;
+}
+@media screen and (min-width: 480px) {
+  .modal-name {
+    font-size: 18px;
+  }
 }
 @media screen and (min-width: 1200) {
   .modal-name {
@@ -1445,11 +1459,15 @@ button {
 }
 
 .agreement {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
   margin-bottom: 30px;
+}
+@media screen and (min-width: 480px) {
+  .agreement {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
 }
 
 .agreement-title {
