--- a/sass/components/_agreement.scss
+++ b/sass/components/_agreement.scss
@@ -1,11 +1,11 @@
 .agreement {
-    @include flex;
-    
-    // display: flex;
-    // align-items: center;
-    // justify-content: center;
-    gap: 10px;
+
     margin-bottom: 30px;
+
+    @media screen and (min-width: 480px){
+        @include flex;
+        gap: 10px;
+    }
 }
 
 .agreement-title {
@@ -13,6 +13,8 @@
     line-height: 1.72;
     user-select: none;
     color: #757575;
+
+    
 
     @media screen and (min-width: 1200px) {
         font-size: 14px;
@@ -33,7 +35,8 @@
     background-repeat: no-repeat;
     background-size: 0;
     transition: border 300ms cubic-bezier(0.4, 0, 0.2, 1), background-color 300ms cubic-bezier(0.4, 0, 0.2, 1), background-size 300ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    
+    
     &:checked {
     border-color: var(--accent-color);
     background-color: var(--accent-color);
