--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -14,8 +14,16 @@
 
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+    @media screen and (max-width:1199px) {
+        width: 95%;    
+        max-width: 450px;
+            height: 95%;
+            max-height: 609px;
+            overflow: scroll;
+        }
+
     @media screen and (min-width:1200px) {
-        width: 530px;
+        width: 528px;
         min-height: 580px;
     }
 }
@@ -63,6 +71,10 @@
     font-weight: 700;
     text-align: center;
     margin-bottom: 12px;
+
+    @media screen and (min-width:480px) {
+        font-size: 18px;
+    }
 
     @media screen and (min-width:1200) {
         line-height: 1.2;
