--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -70,18 +70,18 @@
     font-weight: 900;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    font-size: 18px;
+    font-size: 26px;
     line-height: calc(42/26);
     margin: 0 auto;
     margin-bottom: 30px;
     width: 300px;
     
-    @media screen and (min-width: 480px) {
-            font-size: 26px;
-            line-height: 1.6;
-            margin-bottom: 20px;
-            width: 360px;
-        }
+    // @media screen and (min-width: 480px) {
+    //         font-size: 26px;
+    //         line-height: 1.6;
+    //         margin-bottom: 20px;
+    //         width: 360px;
+    //     }
 
 
        @media screen and (min-width: 1200px) {
