--- a/sass/components/_burger.scss
+++ b/sass/components/_burger.scss
@@ -180,23 +180,11 @@
     }
 }
 
-// .mobile-sites__line>a::after {
-//      content: '';
-//      display: block;
-//      width: 1px;
-//      height: 22px;
-//      border-radius: 3px;
-//      background-color: var(--accent-color);
-//      position: absolute;
-//      top:10px;
-     
-     
-     
-//  }
 
-.mobile-sites:not(:last-child) {
-     margin-right: 20px;
- }
+
+// .mobile-sites:not(:last-child) {
+//      margin-right: 20px;
+//  }
 
 .mobile-sites > a{
     
@@ -209,3 +197,8 @@
     color: var(--accent-color);
 
 }
+.mobile-sites:not(:last-child) {
+     margin-right: 10px;
+     padding-right: 10px;
+     border-right: 1px solid var(--accent-color);   
+ }
