--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -7,13 +7,18 @@
 
 .footer_container {
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
+    @media screen and (max-width: 767px) {
+    
+    flex-direction: column;
+    
     justify-content: center;
+    }
+    
 
     @media screen and (min-width: 768px) {
             flex-direction: row;
-            justify-content: space-around;
+            justify-content: center;
         }
 
     @media screen and (min-width: 1200px) {
@@ -22,24 +27,25 @@
 }
 
 .footer--transform {
-    width: 100%;
-    display: flex;
+    margin-bottom: 60px;
+    
+
+    @media screen and (max-width:767px) {
+        display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     text-align: center;
     margin-bottom: 30px;
-
-    @media screen and (min-width: 320px) and (max-width:479px) {
             margin-bottom: 50px;
-            
+            width: 100%;
         }
 
-    @media screen and (min-width: 480px) and (max-width:1199px) {
-        margin-bottom: 60px;
-       
-        }
     
+    @media screen and (min-width:768px) and (max-width:1199px) {
+        
+        margin-right: 165px;
+    }
  
 
     @media screen and (min-width: 1200px) {
@@ -104,22 +110,29 @@
 
 
 .footer_subscribe{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 20px;
-    
-
-
+   
+    // display: flex;
+    // flex-direction: column;
+    @media screen and (max-width: 479px) {
+         width: 100%;
+    }
     @media screen and (min-width: 480px) and (max-width: 1199px){
-    margin-bottom: 60px;
-    justify-content: center;
+    
+    // justify-content: center;
     text-align: center;
-    align-items: center;
+    // align-items: center;
     }
 
-    
 }
+
+.footer_subscribe--bottom{
+    
+
+    @media screen and (max-width:1199px) {
+        margin-bottom: 60px;
+    }
+}
+
 
 
 .footer_subscribe:nth-last-child(2) {
@@ -213,9 +226,12 @@
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     @media screen and (min-width: 480px) {
-        width: 360px;
+        width: 450px;
     }
     
+        @media screen and (min-width: 1200px) {
+            width: 358px;
+        }
 
     &::placeholder {
     font-size: 16px;
