--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -7,8 +7,15 @@
     line-height: 1.2;
     letter-spacing: 0.03em;
     display: inline-block;
-    margin-top: 25px;
+    margin: 16px 0;
+
+
+    @media screen and (min-width: 480px) {
+        margin-top: 25px;
     margin-bottom: 24px;
+    }
+
+    
 }
 
 .header_logo {
@@ -23,11 +30,11 @@
     font-size: 24px;
     line-height: calc(28/24);
 
-    @media screen and (min-width: 480px) {
-        margin-bottom: 20px;
-        font-size: 20px;
-        line-height: 1.2;
-        }
+    // @media screen and (min-width: 480px) {
+    //     margin-bottom: 20px;
+    //     font-size: 20px;
+    //     line-height: 1.2;
+    //     }
 
     @media screen and (min-width: 1200) {
         font-size: 26px;
