--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -43,7 +43,7 @@
 
     
     @media screen and (min-width:768px) and (max-width:1199px) {
-        
+        text-align: center;
         margin-right: 165px;
     }
  
