--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -21,6 +21,10 @@
     padding: 20px 24px;
     border: 1px solid var(--border-header);
 
+    @media screen and (min-width:768px) and (max-width:1199px) {
+        flex-grow: 1;
+    }
+
 }
 
 .portfolio-link {
@@ -29,6 +33,11 @@
     color: currentColor;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+    @media screen and (min-width:768px) and (max-width:1199px) {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+    }
 
         &:hover,
         &:focus {
